[package]
name = "kwp"
version = "0.2.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sycer-dev/kwp"
documentation = "https://docs.rs/kwp"
description = "An input parser for positive and negative keywords input (e.g: +foo,-bar,+baz)"
edition = "2018"
keywords = ["parsing", "keywords"]
authors = ["Carter Himmel <fyko@sycer.dev>"]
